# modal-easyocr

./: .gitignore  LICENSE  README.md  download_model.py  final.py  hello.py  package-lock.json  pyproject.toml  req.py
