[project]
name = "modal-easyocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zakhar Kogan", email = "36503576+zaharkogan@users.noreply.github.com" } 
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pillow>=11.0.0",
    "torch",
    "easyocr",
    "python-dotenv"
]

[project.scripts]
modal-easyocr = "modal_easyocr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
